<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="hint_ip">10.0.2.2</string>
    <string name="hint_port">8080</string>
    <string name="hint_user_name">johndoe</string>
    <string name="hint_password">password</string>
    <string name="hint_first_name">John</string>
    <string name="hint_last_name">Doe</string>
    <string name="hint_email">johndoe@gmail.com</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signin">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_map_text">Click on a marker to see details about an event</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="first_name_caps">FIRST NAME</string>
    <string name="last_name_caps">LAST NAME</string>
    <string name="gender_caps">GENDER</string>
    <string name="birth_events">Birth Events</string>
    <string name="birth_events_desc">FILTER BY BIRTH EVENTS</string>
    <string name="baptism_events">Baptism Events</string>
    <string name="baptism_events_desc">FILTER BY BAPTISM EVENTS</string>
    <string name="marriage_events">Marriage Events</string>
    <string name="marriage_events_desc">FILTER BY MARRIAGE EVENTS</string>
    <string name="death_events">Death Events</string>
    <string name="death_events_desc">FILTER BY DEATH EVENTS</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="fathers_side_desc">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="mothers_side_desc">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="gender_events_desc">FILTER EVENTS BASED ON GENDER</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="life_story_lines_desc">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="family_tree_lines_desc">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="spouse_lines_desc">SHOW SPOUSE LINES</string>
    <string name="map_type">Map Type</string>
    <string name="map_type_desc">BACKGROUND DISPLAY ON MAP</string>
    <string name="resync_date">Re-sync Data</string>
    <string name="resync_date_desc">FROM FAMILY MAP SERVER</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">RETURNS TO LOGIN SCREEN</string>
    <string name="search_icon_desc">Search Icon</string>
    <string name="map_profile_desc">Map Profile</string>
    <string name="recycler_arrow_desc">Arrow</string>
    <string name="recycler_profile_desc">Profile</string>
    <string-array name="setting_color_options">
        <item>Red</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Black</item>
    </string-array>
    <string-array name="setting_map_options">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
</resources>